# TMvisDB

./: .gitignore  Dockerfile  README.md  convert_mongodp.ipynb  entrypoint.sh  pyproject.toml  requirements.txt  streamlitapp.py
.github/workflow/: main.yml
.github/workflows/: main.yml
app/: database.py  sidebar.py  table.py  visualization.py
src/: streamlitapp.py
src/app/: data.py  database.py  protein_list.py  protein_vizualization.py  sidebar.py  visualization.py
src/utils/: annotations.py  api.py  database.py  membrane_annotation.py  protein_info.py  protein_visualization.py
src/views/: __init__.py  about.py  header.py  protein_detail.py  protein_list.py  protein_visualization.py  sidebar.py
tools/: convert_mongodp.ipynb  optimize_db.ipynb
utils/: api.py  coloring.py  db.py  protein_info.py
