[project]
name = "TMvisDB"
version = "1.0.0"
description = "Default template for PDM package"
authors = [
    {name = "Tobias Olenyi"},
    {name = "Celine Marquet"},
]
dependencies = [
    "py3Dmol>=2.0.3",
    "streamlit>=1.27.2",
    "pandas>=2.0.3",
    "peewee>=3.17.5",
    "httpx>=0.27.0",
    "streamlit-aggrid>=1.0.5",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "AFL"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "tqdm>=4.66.4",
    "jupyterlab>=4.1.6",
]
